syntax = "proto3";

package protocol;

message Function {
    string name = 1;
    string root = 2;
    bool running = 3;
    uint32 pid = 4;
    Network network = 6;

    message Network {
        string ip = 1;
        string gateway = 2;
        string mask = 3;
    }
}

message CreateRequest {
    string name = 1;
}

message CreateResponse {
    Function function = 1;
}

message ListRequest {

}

message ListResponse {
    repeated Function functions = 1;
}

service FunctionService {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc List (ListRequest) returns (ListResponse);
}
